# cardamon

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config.toml.example  docker-compose.yml
.github/workflows/: image-build.yml
src/: main.rs
src/cardamon/: build.rs  config.rs  mod.rs  namespaces.rs  serve.rs
templates/: index.html  index.js
