[package]
name = "cardamon"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.8.1"
clap = { version = "4.5.27", features = ["derive"] }
id3 = "1.16.2"
notify = "8.0.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.12.1", features = ["v5"] }
walkdir = "2.5.0"
